# neosiak-automation-suite

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
commit/: messages.txt
docs/: HOW-TO-USE.md
neosiak_automation_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/ps/: run-test.ps1  start.ps1
src/: main.py
src/bots/: __init__.py  absen_uas.py  layanan_mahasiswa.py  pengisian_krs.py
src/core/: __init__.py  base_menu.py  driver.py  neosiak.py  singleton.py
src/tests/: __init__.py
src/tests/bots/: absen_uas_test.py  layanan_mahasiswa_test.py  pengisian_krs_test.py
src/tests/core/: base_menu_test.py  driver_test.py  neosiak_test.py  singleton_test.py
src/tests/utils/: display_menu_test.py
src/utils/: __init__.py  display_menu.py
tests/: conftest.py  main_test.py
tests/bots/: absen_uas_test.py  layanan_mahasiswa_test.py  pengisian_krs_test.py
tests/core/: base_menu_test.py  driver_test.py  neosiak_test.py  singleton_test.py
tests/utils/: display_menu_test.py
